# elephant_acoustic_monitoring

./: .gitignore  EDA.ipynb  EDA_gunshot.ipynb  EDA_yamnet_gunshot_STREAMING_CACHE.ipynb  Gunshot_CNN_Similarity_Search_NO_WGET.ipynb  YAMNet_decreasemaxfile.ipynb  downloadclip.ipynb  gunshot_detector.py  main.py  melspecs_and_predictions.ipynb  pyproject.toml
